# hboat

./: .stylish-haskell  .travis.yml  README.md  default.nix  jsaddle-warp-ghcjs.nix  nixpkgs-version.json  project.nix  release.nix
backend/: backend.cabal
backend/src/Control/Monad/: Feed.hs
backend/src/Data/: Zipper.hs
backend/src/HBoat/: Types.hs
backend/src/HBoat/Control/: Feed.hs
backend/src/HBoat/Data/: Zipper.hs
backend/src/HBoat/SQLite/: Migrations.hs
backend/test/: Spec.hs
backend/test/Test/Data/: Zipper.hs
common/: common.cabal
common/src/: CustomPrelude.hs
frontend/: frontend.cabal
frontend/src/: Main.hs
frontend/src/Component/: Subscription.hs
frontend/src/Data/: Zipper.hs
frontend/src/Model/: Subscription.hs
genvalidity-hspec-comonad/: CHANGELOG.md  genvalidity-hspec-comonad.cabal
genvalidity-hspec-comonad/src/Test/Validity/: Comonad.hs
