cabal-version:       >=1.10
-- Initial package description 'genvalidity-hspec-comonad.cabal' generated
-- by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                genvalidity-hspec-comonad
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Mats Rauhala
maintainer:          mats.rauhala@iki.fi
-- copyright:
category:            Testing
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Test.Validity.Comonad
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
                     , genvalidity-hspec
                     , genvalidity
                     , genvalidity-property
                     , hspec
                     , QuickCheck
                     , comonad
  hs-source-dirs:      src
  default-language:    Haskell2010
